--- a/src/Objects/BoardGame/style.css
+++ b/src/Objects/BoardGame/style.css
@@ -1,6 +1,7 @@
 .board-game {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-evenly;
     gap: 20px;
+    justify-content: space-evenly;
+    perspective: 400px;
 }
