--- a/src/components/styles/settings/colors.css
+++ b/src/components/styles/settings/colors.css
@@ -2,4 +2,6 @@
     --color-alura: #051932;
     --color-pomb-and-power: #7C5E99; 
     --color-floral-white: #FFFCEE;   
+    --color-fiery-rose: #F25A70;
+
 }
