✨ Add event on CardFrontBack component

--- a/src/components/CardFrontBack/style.css
+++ b/src/components/CardFrontBack/style.css
@@ -6,6 +6,7 @@
     transform-style: preserve-3d;
     position: relative;
     transition: transform 0.6s cubic-bezier(0.42, 0, 0.54, 1.68);
+    cursor: pointer;
 }
 
 .card-front-back.-active {
