--- a/src/components/styles/settings/colors.css
+++ b/src/components/styles/settings/colors.css
@@ -3,5 +3,5 @@
     --color-pomb-and-power: #7C5E99; 
     --color-floral-white: #FFFCEE;   
     --color-fiery-rose: #F25A70;
-
+    --color-sandstorm: #F5D547;
 }
